# services/codelist-service/src/main/resources/static/openapi.yaml
@@ -14,12 +14,37 @@ servers:
     description: Codelist Service API through API Gateway
 
 tags:
+  - name: addresses
+    description: Operations for managing addresses
   - name: countries
     description: Operations for managing countries
   - name: domains
     description: Operations for managing codelist domains
 
 paths:
+
+  /addresses:
+    get:
+      tags:
+        - addresses
+      summary: Get addresses
+      description: Retrieve list of addresses available in the system based on the specified filters.
+      operationId: getAddresses
+      parameters:
+        - $ref: '#/components/parameters/Query'
+      responses:
+        '200':
+          description: List of addresses.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AddressListResponse'
+        '400':
+          $ref: '#/components/responses/400BadRequest'
+        '500':
+          $ref: '#/components/responses/500InternalServerError'
+        'default':
+          $ref: '#/components/responses/Default'
 
   /countries:
     get:
@@ -41,8 +66,6 @@ paths:
           $ref: '#/components/responses/400BadRequest'
         '401':
           $ref: '#/components/responses/401Unauthorized'
-        '403':
-          $ref: '#/components/responses/403Forbidden'
         '500':
           $ref: '#/components/responses/500InternalServerError'
         'default':
@@ -115,6 +138,16 @@ components:
           - en
         default: cs
 
+    Query:
+      name: query
+      in: query
+      description: Query string.
+      required: false
+      schema:
+        type: string
+        maxLength: 300
+        example: "Czech"
+
     Domain:
       name: domain
       in: path
@@ -124,6 +157,49 @@ components:
         $ref: '#/components/schemas/Domain'
 
   schemas:
+
+    AddressListResponse:
+      type: object
+      title: Address List Response
+      description: Response containing a list of addresses.
+      additionalProperties: false
+      nullable: false
+      required:
+        - addresses
+      properties:
+        addresses:
+          type: array
+          description: List of addresses.
+          items:
+            $ref: '#/components/schemas/Address'
+          maxItems: 20
+          nullable: false
+          uniqueItems: true
+
+    Address:
+      type: object
+      title: Address
+      description: Response containing an address.
+      additionalProperties: false
+      nullable: false
+      required:
+        - id
+        - name
+      properties:
+        id:
+          type: integer
+          format: int32
+          nullable: false
+          description: Unique identifier of the address.
+          example: 1
+          minimum: 1
+        name:
+          type: string
+          nullable: false
+          description: Fully formatted address.
+          example: "Lysá 617, Želechovice nad Dřevnicí, 76311"
+          minLength: 1
+          maxLength: 500
 
     CountryListResponse:
       type: object
